--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@
                       <div class="cell"></div>
                       <div class="cell"></div>
                       <div class="cell"></div>
-                      <div class="cell-player"></div>
+                      <div class="cell"></div>
                       <div class="cell"></div>
                       <div class="cell"></div>
                       <div class="cell"></div>
                       <div class="cell"></div>
                   </div>
                   <div class="row">
+                      <div class="cell">A</div>
                       <div class="cell"></div>
                       <div class="cell"></div>
                       <div class="cell"></div>
-                      <div class="cell"></div>
-                      <div class="cell"></div>
+                      <div class="cell">A</div>
                       <div class="cell"></div>
                       <div class="cell"></div>
                       <div class="cell"></div>
